# lets-build-gpt

./: .gitignore  .pre-commit-config.yaml  README.md  hellaswag.py  pyproject.toml  train-gpt-2.py
.github/workflows/: compile-check.yml
gpt-2/: fineweb.py  hellaswag.py  model.py  train.py
notebooks/: scratchpad.ipynb
scripts/: check_model_compiles.py  train-gpt-2.py  v2.py
