[project]
name = "llms-material"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "wandb>=0.22.0",
]
